--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -23,3 +23,12 @@
 
    opacity: rgba(0, 0, 0, 0.8); 
 } */
+
+.resultUrl{
+  min-height: 50px;
+  width: 100%;
+  background-color: rgb(245, 255, 47);
+  color: black;
+  /* font-size: 1.5em; */
+  border-radius: 8px;
+}
