--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -7,22 +7,16 @@
   background-color: #000000;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='250' height='30' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%23222' stroke-width='10' %3E%3Cpath d='M-500 75c0 0 125-30 250-30S0 75 0 75s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 45c0 0 125-30 250-30S0 45 0 45s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 105c0 0 125-30 250-30S0 105 0 105s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 15c0 0 125-30 250-30S0 15 0 15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500-15c0 0 125-30 250-30S0-15 0-15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 135c0 0 125-30 250-30S0 135 0 135s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3C/g%3E%3C/svg%3E");
 }
-/* .dashboard {
+.dashboard {
   width: 100%;
   min-height: calc(100vh - 70px);
   display: flex;
   justify-content: center;
   align-items: center;
-} */
+  background-color: #212529;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='250' height='250' viewBox='0 0 20 20'%3E%3Cg %3E%3Cpolygon fill='%23505050' points='20 10 10 0 0 0 20 20'/%3E%3Cpolygon fill='%23505050' points='0 10 0 20 10 20'/%3E%3C/g%3E%3C/svg%3E");
+}
 
-/* .cover {
-    width: 100%;
-    height: 100%;
-    z-index: 10;
-  background-color: #000;
-
-   opacity: rgba(0, 0, 0, 0.8); 
-} */
 
 .resultUrl{
   min-height: 50px;
@@ -31,4 +25,8 @@
   color: black;
   /* font-size: 1.5em; */
   border-radius: 8px;
+}
+
+@media (min-width:0px) and (max-width:480px){
+  
 }
